# zeal-microbe

./: .gitignore  CMakeLists.txt  Makefile  README.md  zvb_tools.cmake
.deploy/: index.css  index.html  index.js  zeal.elf.js  zeal.elf.js.symbols  zeal.elf.wasm
.deploy/libnative/: hostfs.js  zeal-native.js
.github/actions/deploy-pages/: action.yml
.github/workflows/: build.yml  deploy.yml
assets/: letters.aseprite  microbe-full.aseprite  microbe.aseprite  microbe.tmx  microbe.tsx  microbe.tzp  numbers.aseprite  splash.tmx  tiles.aseprite  untitled.tiled-session
src/: assets.c  assets.h  boss.c  boss.h  bullet.c  bullet.h  controller.c  controller.h  game.h  invader.c  invader.h  keyboard.c  keyboard.h  main.c  microbe.c  microbe.h  player.c  player.h  sounds.c  sounds.h  splash.c  splash.h  utils.c  utils.h
